story-vault-be v1.6